--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http_cache_hive_store: ^5.0.2
   device_info_plus: ^12.3.0
   package_info_plus: ^9.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
