--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   package_info_plus: ^9.0.0
   intl: ^0.20.2
   freezed_annotation: ^3.1.0
+  fpdart: ^1.2.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
