--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dev_dependencies:
   json_serializable: ^6.12.0
   build_runner: ^2.11.0
   json_annotation: ^4.10.0
+  mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
